# co-snarks

./: .gitignore  Cargo.toml  SPDZ_OPTIMIZATIONS.md
co-noir/co-acvm/: Cargo.toml
co-noir/co-acvm/src/: solver.rs
co-noir/co-acvm/src/mpc/: rep3.rs
co-noir/co-brillig/: Cargo.toml
co-noir/co-brillig/src/: brillig_vm.rs  memory.rs
co-noir/co-builder/: Cargo.toml
co-noir/co-builder/src/: acir_format.rs  transcript_ct.rs  ultra_builder.rs
co-noir/co-builder/src/honk_verifier/: claim_batcher.rs  oink_recursive_verifier.rs  recursive_decider_verification_key.rs  shplemini.rs  sumcheck.rs  ultra_recursive_verifier.rs
co-noir/co-builder/src/keys/: plain_proving_key.rs  proving_key.rs  types.rs
co-noir/co-builder/src/types/: big_field.rs  field_ct.rs  honk_recursion_constraint.rs  plookup.rs  rom_ram.rs  types.rs
co-noir/co-noir/: Cargo.toml
co-noir/co-noir-common/: Cargo.toml
co-noir/co-noir-common/src/: constants.rs  keccak_hash.rs  lib.rs  maybe_rayon.rs  transcript.rs
co-noir/co-noir-common/src/keys/: proving_key.rs
co-noir/co-noir-common/src/mpc/: mod.rs  plain.rs  rep3.rs  shamir.rs
co-noir/co-noir-common/src/polynomials/: entities.rs
co-noir/co-noir/examples/: compare.sh
co-noir/co-ultrahonk/: Cargo.toml
co-noir/co-ultrahonk/src/: co_ultra_prover.rs  types_batch.rs
co-noir/co-ultrahonk/src/co_decider/: co_decider_prover.rs  types.rs
co-noir/co-ultrahonk/src/co_oink/: co_oink_prover.rs  types.rs
co-noir/noir-types/src/: lib.rs
co-noir/ultrahonk/: Cargo.toml
co-noir/ultrahonk/src/: lib.rs  multilinear_batching.rs  ultra_verifier.rs
co-noir/ultrahonk/src/decider/: decider_prover.rs  decider_verifier.rs  types.rs
co-noir/ultrahonk/src/hypernova/: batching_sumcheck.rs  decider_prover.rs  decider_verifier.rs  folding_prover.rs  folding_verifier.rs  mod.rs
co-noir/ultrahonk/src/ipa/: mod.rs  prover.rs  verifier.rs
co-noir/ultrahonk/src/oink/: oink_prover.rs  oink_verifier.rs  types.rs
mpc-core/: Cargo.toml
mpc-core/src/protocols/: shamir.rs
scripts/: UPGRADE_PATH.md  UPGRADE_STATUS.md  bump_noir_beta19.sh
spdz/acvm/: Cargo.toml
spdz/acvm/src/: solver.rs
spdz/core/: Cargo.toml
spdz/core/src/: arithmetic.rs  lib.rs  preprocessing.rs  profiling.rs  types.rs
spdz/core/src/ot/: async_io.rs  channel.rs  ferret.rs  mod.rs  preprocessing.rs  triples.rs
spdz/noir/: Cargo.toml
spdz/noir/src/: lib.rs
spdz/noir/tests/: bench_chess.rs  recursion.rs
spdz/pcg/: Cargo.toml  README.md
spdz/pcg/benches/: ole_throughput.rs
spdz/pcg/src/: dmpf.rs  dmpf_gen_protocol.rs  dmpf_oblivious.rs  dpf.rs  dpf_oblivious.rs  ferret_bit_ot.rs  ferret_dpf_gen.rs  ferret_protocol.rs  lib.rs  mux_network.rs  pcg.rs  preprocessing.rs  prg_2pc.rs  protocol.rs  ring_lpn.rs  ring_lpn_pcg.rs  sparse.rs  triples.rs
spdz/pcg/tests/: dmpf_oblivious_e2e.rs  dpf_bench.rs  dpf_level0_cw.rs  dpf_multi_level.rs  dpf_oblivious_chou_orlandi.rs  dpf_oblivious_ferret.rs  dpf_oblivious_lib.rs  end_to_end.rs  ferret_bit_ot_e2e.rs  ferret_protocol_e2e.rs  gc_aes_ferret.rs  gc_aes_poc.rs  gc_prg_2pc.rs  gc_prg_2pc_shared.rs  parallel_dmpf_demo.rs  parallel_dmpf_muxed.rs  pcg_oblivious_e2e.rs  prg_2pc_bench.rs  prg_2pc_session.rs  spdz_oblivious_pcg_e2e.rs
spdz/ultrahonk/: Cargo.toml
spdz/ultrahonk/src/: driver.rs
test_vectors/noir/add3u64/kat/: add3u64.json  add3u64_proof_with_kec  add3u64_proof_with_pos  proof_plaindriver
test_vectors/noir/addition_multiplication/kat/: addition_multiplication.json
test_vectors/noir/aes128/kat/: aes128.json
test_vectors/noir/approx_sigmoid/kat/: approx_sigmoid.json
test_vectors/noir/assert/kat/: assert.json
test_vectors/noir/bb_sha256_compression/kat/: bb_sha256_compression.json
test_vectors/noir/blackbox_and/kat/: blackbox_and.json
test_vectors/noir/blackbox_poseidon2/kat/: blackbox_poseidon2.json
test_vectors/noir/blackbox_xor/kat/: blackbox_xor.json
test_vectors/noir/blake2s/kat/: blake2s.json
test_vectors/noir/blake3/kat/: blake3.json
test_vectors/noir/embedded_curve_add/kat/: embedded_curve_add.json
test_vectors/noir/get_bytes/kat/: get_bytes.json
test_vectors/noir/if_then/kat/: if_then.json
test_vectors/noir/mul_shared/kat/: mul_shared.json
test_vectors/noir/negative/kat/: negative.json
test_vectors/noir/pedersen_commitment/kat/: pedersen_commitment.json
test_vectors/noir/pedersen_hash/kat/: pedersen_hash.json
test_vectors/noir/poseidon/kat/: pos_proof_with_kec  pos_proof_with_pos  poseidon.json  vk_plaindriver
test_vectors/noir/poseidon2/kat/: poseidon2.json
test_vectors/noir/poseidon_assert/kat/: poseidon_assert.json
test_vectors/noir/poseidon_input2/kat/: poseidon_input2.json
test_vectors/noir/poseidon_stdlib/kat/: poseidon_stdlib.json
test_vectors/noir/recursion/: Prover.toml
(+31 files in other folders)
