[package]
name = "spdz-pcg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
## Enable Ferret-based OleProtocol implementation (pulls in mpz dependencies).
ferret = ["spdz-core/ferret"]

[dependencies]
spdz-core = { path = "../core" }
mpc-net = { version = "0.5.0", path = "../../mpc-net", default-features = false }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
eyre = { workspace = true }
sha3 = "0.10"

[dev-dependencies]
ark-bn254 = { workspace = true }
criterion = "0.5"
mpc-net = { version = "0.5.0", path = "../../mpc-net", features = ["local"] }

[[bench]]
name = "ole_throughput"
harness = false
