[package]
name = "spdz-pcg"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "SPDZ preprocessing backed by the pcg-bn254 crates"

[features]
default = []
## Enable Ferret-based OleProtocol implementation (pulls in mpz dependencies).
ferret = ["spdz-core/ferret"]

[dependencies]
# Our own SPDZ glue.
spdz-core = { path = "../core" }
mpc-net = { version = "0.5.0", path = "../../mpc-net", default-features = false }
# Standalone PCG crates (zkfrov/pcg-bn254 repo).
pcg-core = { path = "../../../pcg-bn254/core" }
pcg-protocols = { path = "../../../pcg-bn254/protocols" }
# Standard.
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
mpc-net = { version = "0.5.0", path = "../../mpc-net", features = ["local"] }
